--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     valid: true,
                     value: [document.querySelector('#userDrop').value, document.querySelector('#userInput').value]
                 }
-                
-                <!--Sets the hidden email field as the selected option-->
+
+                // <!--Sets the hidden email field as the selected option-->
                 document.querySelector('#input_4').value = document.querySelector('#userDrop').value
 
                 JFCustomWidget.sendSubmit(msg)
