--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 }
 
                 // <!--Sets the hidden email field as the selected option-->
-                document.querySelector('#input_4').value = document.querySelector('#userDrop').value
+                //document.querySelector('#input_4').value = document.querySelector('#userDrop').value
+
+                JFCustomWidget.setFieldsValueById('email') = document.querySelector('#userDrop').value
 
                 JFCustomWidget.sendSubmit(msg)
 
