--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
                     value: [document.querySelector('#userDrop').value, document.querySelector('#userInput').value]
                 }
 
-                // <!--Sets the hidden email field as the selected option-->
-                //document.querySelector('#input_4').value = document.querySelector('#userDrop').value
-
-                JFCustomWidget.setFieldsValueById('email') = document.querySelector('#userDrop').value
+                JFCustomWidget.setFieldsValueById('email', document.querySelector('#userDrop').value)
 
                 JFCustomWidget.sendSubmit(msg)
 
