--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     value: [document.querySelector('#userDrop').value, document.querySelector('#userInput').value]
                 }
 
-                JFCustomWidget.setFieldsValueById('email', document.querySelector('#userDrop').value)
+                JFCustomWidget.setFieldsValueById('input_4', document.querySelector('#userDrop').value)
 
                 JFCustomWidget.sendSubmit(msg)
 
