--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <option value="Second.Option@thresholds.org">Second Option</option>
             <option value="Third.Option@thresholds.org">Third Option</option>
         </select>
-        <a href="/nextPage.html">Next page</a>
+        <a href="https://thresholds4101.github.io/Jotform-Widget-Test/nextPage.html">Next page</a>
     </div>
 
     <script type="text/javascript">
