--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://thresholds4101.github.io/Jotform-Widget-Test/nextPage.html">Next page</a>
     </div>
 
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         JFCustomWidget.subscribe("ready", function () {
 
             console.log('here')
@@ -41,7 +41,7 @@
             })
 
         })
-    </script>
+    </script> -->
 </body>
 
 </html>
