--- a/nextPage.html
+++ b/nextPage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Next Page</title>
     <link rel="stylesheet" href="style.css">
+     <script src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
   </head>
   <body>
     <input type=text id="secondInput"></input>
