--- a/nextPage.html
+++ b/nextPage.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Next Page</title>
     <link rel="stylesheet" href="style.css">
-     <script src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
+     <!--Script should be here-->
   </head>
   <body>
     <input type=text id="secondInput"></input>
     <button>Different Page</button>
+  <script src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
   <script type="text/javascript">
         JFCustomWidget.subscribe("ready", function () {
 
